Stops tooltip causing scrollbars

--- a/src/webviews/apps/commitDetails/commitDetails.scss
+++ b/src/webviews/apps/commitDetails/commitDetails.scss
@@ -139,4 +139,5 @@ webview-pane-group {
 
 :root {
 	--gk-avatar-size: 1.6rem;
+	overflow: hidden;
 }
